Update index.html for Found Map project

--- a/found.map/index.html
+++ b/found.map/index.html
@@ -3,29 +3,52 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mapbox QR Map</title>
+    <title>Found Map</title>
+
+    <!-- Mapbox -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css" rel="stylesheet" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v3.0.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
+
     <style>
-      html, body { margin: 0; padding: 0; height: 100%; }
-      #map { width: 100%; height: 100%; }
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+      #map {
+        width: 100%;
+        height: 100%;
+      }
+      .mapboxgl-popup-content {
+        font-family: sans-serif;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
     <div id="map"></div>
-    <script>
-      mapboxgl.accessToken = 'pk.eyJ1IjoibWZ6ZWQiLCJhIjoiY21mMTFmbW9tMDltaTJpc2Zzc2pubGhudiJ9.phgaiYOF9Wx7jHvS140_oQ';
-      const params = new URLSearchParams(window.location.search);
-      const lat = parseFloat(params.get("lat")) || 41.0082;
-      const lng = parseFloat(params.get("lng")) || 28.9784;
 
+    <script>
+      // 🔑 Senin kendi token'ın
+      mapboxgl.accessToken = 'pk.eyJ1IjoibWZ6ZWQiLCJhIjoiY21mMTFmbW9tMDltaTJpc2Zzc2pubGhudiJ9.phgaiYOF9Wx7jHvS140_oQ';
+
+      // 🔍 URL parametrelerinden koordinat oku (örneğin ?lat=38.42&lng=27.14)
+      const params = new URLSearchParams(window.location.search);
+      const lat = parseFloat(params.get("lat")) || 38.4192; // İzmir default
+      const lng = parseFloat(params.get("lng")) || 27.1287;
+
+      // 🗺️ Haritayı oluştur
       const map = new mapboxgl.Map({
         container: "map",
-        style: "mapbox://styles/mapbox/streets-v12",
+        style: "mapbox://styles/mapbox/streets-v12", // İstersen kendi stil URL'ini buraya yaz
         center: [lng, lat],
-        zoom: 15
+        zoom: 14
       });
 
+      // 📍 Marker ekle
       const marker = new mapboxgl.Marker({ color: "#ff3b3b" })
         .setLngLat([lng, lat])
         .setPopup(
